Closed
Bug 1494806
Opened 7 years ago
Closed 7 years ago
Exact constraints containing string arrays, e.g. {deviceId: {exact:['id']}} are treated as ideal.
Categories
(Core :: WebRTC: Audio/Video, defect, P2)
Core
WebRTC: Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox64 | --- | fixed |
People
(Reporter: jib, Assigned: jib)
References
Details
Attachments
(1 file)
Found this bug as a result of improving our constraints logging in bug 1494498.
STR:
1. Open https://jsfiddle.net/jib1/4wp15e6u/ which does this:
await navigator.mediaDevices.getUserMedia({video: {deviceId: {exact: ["boo"]}}});
Expected result:
OverconstrainedError
Actual result:
Succeeds in spite of unknown deviceId.
Workaround:
Avoid arrays:
await navigator.mediaDevices.getUserMedia({video: {deviceId: {exact: "boo"}}});
| Assignee | ||
Updated•7 years ago
|
Rank: 15
| Assignee | ||
Comment 1•7 years ago
|
||
Comment 2•7 years ago
|
||
Comment on attachment 9012750 [details]
Bug 1494806 - Fixed exact string constraints w/arrays, e.g. {deviceId: {exact:['id']}}, were treated as ideal. r?pehrsons
Andreas Pehrson [:pehrsons] has approved the revision.
Attachment #9012750 -
Flags: review+
Pushed by jbruaroey@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7b19326c79fb
Fixed exact string constraints w/arrays, e.g. {deviceId: {exact:['id']}}, were treated as ideal. r=pehrsons
Comment 4•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in
before you can comment on or make changes to this bug.
Description
•