Bug 1494806 - Fixed exact string constraints w/arrays, e.g. {deviceId: {exact:['id']}}, were treated as ideal. r=pehrsons

Differential Revision: https://phabricator.services.mozilla.com/D7144